Fix login display on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -145,6 +145,13 @@ main {
 	margin-bottom: 1rem;
 }
 
+.card#login {
+	position: absolute;
+	left: 50%;
+	width: 25%;
+	transform: translate(-50%, 0);
+}
+
 .card h2 {
 	margin-bottom: 0.5rem;
 	color: #2c3e50;
@@ -331,6 +338,10 @@ footer {
 	nav ul li {
 		margin-left: 0;
 		margin-right: 1rem;
+	}
+
+	.card#login {
+		width: 75%;
 	}
 
 	.sidebar {
